# breeze150

./: CMakeLists.txt  README.md
kstyle/: CMakeLists.txt  breeze.h  breeze.json  breeze150.themerc  breezehelper.cpp  breezestyleplugin.cpp
screenshots/: .directory
